work on mistakes v.1

--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
       <nav class="nav">
         <ul class="nav-list lists">
           <li><a class="nav-item items" href="./index.html">Студія</a></li>
-          <li><a class="nav-item items" href="./portfolio.html">Портфоліо</a></li>
+          <li><a class="nav-item items current" href="./portfolio.html">Портфоліо</a></li>
           <li><a class="nav-item items" href="/">Контакти</a></li>
         </ul>
       </nav>
