--- a/portfolio.html
+++ b/portfolio.html
@@ -62,37 +62,37 @@
             <p class="work-type">Дизайн</p>
           </li>
           <li>
-            ><img src="./images/img2-3.jpg" alt="Лого риби" width="370" />
+            <img src="./images/img2-3.jpg" alt="Лого риби" width="370" />
             <h2 class="work-name">Ресторан <span lang="uk">Seafood</span></h2>
             <p class="work-type">Додаток</p>
           </li>
           <li>
-            ><img src="./images/img2-4.jpg" alt="Навушники" width="370" />
+            <img src="./images/img2-4.jpg" alt="Навушники" width="370" />
             <h2 class="work-name">Проєкт <span lang="uk">Prime</span></h2>
             <p class="work-type">Маркетинг</p>
           </li>
           <li>
-            ><img src="./images/img2-5.jpg" alt="Бокси" width="370" />
+            <img src="./images/img2-5.jpg" alt="Бокси" width="370" />
             <h2 class="work-name">Проєкт <span lang="uk">Boxes</span></h2>
             <p class="work-type">Додаток</p>
           </li>
           <li>
-            ><img src="./images/img2-6.jpg" alt="Монітор" width="370" />
+            <img src="./images/img2-6.jpg" alt="Монітор" width="370" />
             <h2 class="work-name" lang="uk">Inspiration has no Borders</h2>
             <p class="work-type">Веб-сайт</p>
           </li>
           <li>
-            ><img src="./images/img2-7.jpg" alt="Книга" width="370" />
+            <img src="./images/img2-7.jpg" alt="Книга" width="370" />
             <h2 class="work-name">Видання <span lang="uk">Limited Edition</span></h2>
             <p class="work-type">Дизайн</p>
           </li>
           <li>
-            ><img src="./images/img2-8.jpg" alt="Лєйба" width="370" />
+            <img src="./images/img2-8.jpg" alt="Лєйба" width="370" />
             <h2 class="work-name">Проєкт <span lang="uk">LAB</span></h2>
             <p class="work-type">Маркетинг</p>
           </li>
           <li>
-            ><img src="./images/img2-9.jpg" alt="Робота з лептопом" width="370" />
+            <img src="./images/img2-9.jpg" alt="Робота з лептопом" width="370" />
             <h2 class="work-name" lang="uk">Growing Business</h2>
             <p class="work-type">Додаток</p>
           </li>
