--- a/index.html
+++ b/index.html
@@ -97,22 +97,22 @@
         <h2 class="team-title">Наша команда</h2>
 
         <ul class="team-list lists">
-          <li>
+          <li class="team-item">
             <img src="./images/Ighor.jpg" alt="Ігор Дем'яненко" width="270" />
             <h3 class="team-name">Ігор Дем'яненко</h3>
             <p class="team-prof" lang="en">Product Designer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img src="./images/Olgha.jpg" alt="Ольга Рєпіна" width="270" />
             <h3 class="team-name">Ольга Рєпіна</h3>
             <p class="team-prof" lang="en">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img src="./images/Mikola.jpg" alt="Микола Тарасов" width="270" />
             <h3 class="team-name">Микола Тарасов</h3>
             <p class="team-prof" lang="en">Marketing</p>
           </li>
-          <li>
+          <li class="team-item">
             <img src="./images/Miho.jpg" alt="Михайло Єрмаков" width="270" />
             <h3 class="team-name">Михайло Єрмаков</h3>
             <p class="team-prof" lang="en">UI Designer</p>
